--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:id="@+id/relativeLayout">
+    android:id="@+id/constraint_layout">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
