--- a/app/src/main/res/layout/recycler_view_model.xml
+++ b/app/src/main/res/layout/recycler_view_model.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
@@ -30,7 +30,7 @@
             android:layout_height="105dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:paddingLeft="80dp"
+            android:paddingLeft="20dp"
             android:paddingTop="30dp"
             android:text="456789"
             android:textSize="18sp"
